# hirezone-uz

./: package-lock.json  package.json  tsconfig.json
claudir-gemini/: Cargo.toml  SETUP.md
claudir-gemini/src/: config.rs  db.rs  gemini.rs  main.rs  memory.rs  spam.rs
cv-builder/: DEPLOYMENT_UZ.md
cv-builder/locales/: uz-UZ.po
cv-builder/src/routes/: __root.tsx
cv-builder/src/utils/: locale.ts  twa.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/app/candidates/: Candidates.module.css  page.tsx
src/app/contact/: Contact.module.css  page.tsx
src/app/cv-builder/: CVBuilder.module.css  layout.tsx  page.tsx
src/app/jobs/: Jobs.module.css  layout.tsx  page.tsx
src/app/login/: Login.module.css  page.tsx
src/app/post-job/: PostJob.module.css  page.tsx
src/app/register/: Register.module.css  page.tsx
src/app/settings/: Settings.module.css  page.tsx
src/app/solutions/: page.tsx
src/components/AboutSection/: AboutSection.module.css  AboutSection.tsx
src/components/Categories/: Categories.module.css  Categories.tsx
src/components/Footer/: Footer.module.css  Footer.tsx
src/components/Header/: Header.module.css  Header.tsx
src/components/Hero/: Hero.module.css  Hero.tsx
src/components/HowItWorks/: HowItWorks.module.css  HowItWorks.tsx
src/components/IndustriesServed/: IndustriesServed.module.css  IndustriesServed.tsx
src/components/LatestJobs/: LatestJobs.module.css  LatestJobs.tsx
src/context/: LanguageContext.tsx  ThemeContext.tsx
src/lib/: translations.ts
src/lib/db/: schema.ts
(+29 files in other folders)
