[package]
name = "claudir-gemini"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claudir-gemini"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "sqlite-storage"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
